[project]
name = "comfyui-unianimate-w-dk"
description = "fix-1: These are nodes to animate an image with a reference video using UniAnimate. [w/Name conflict with AIFSH/ComfyUI-UniAnimate. Cannot install simulatenously.]"
version = "1.4.9dk"
license = {file = "LICENSE"}
dependencies = ["numpy", "opencv-python", "pytorch_lightning", "lightning_utilities", "lightning_fabric", "torchmetrics", "xformers", "einops", "onnxruntime-gpu", "open-clip-torch", "fairscale", "easydict", "imageio", "matplotlib", "args"]

[project.urls]
Repository = "https://github.com/jc138691/ComfyUI-UniAnimate-W-saved250208a.git"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "isi-dev-dkFix"
DisplayName = "ComfyUI-UniAnimate-W-dk"
Icon = ""
